python-apt (0.6.13) breezy; urgency=low

  * support for Marked{Downgrade,Reinstall} added
  * Cache.GetChanges() added

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed,  1 Jun 2005 14:57:57 +0200

python-apt (0.6.12ubuntu1) breezy; urgency=low

  * Greek0@gmx.net--2005-main/python-apt--debian--0.6:
    - python2.{3,4}-apt conflicts with python-apt (<< 0.6.11)
      (closes: #308586)
      (closes ubuntu: #11380)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 12 May 2005 11:34:05 +0200

python-apt (0.6.12) breezy; urgency=low
  
  * added a tests/ directory
  * added tests/pkgsrcrecords.py that will check if the pkgsrcrecords
    interface does not segfault
  * new native python "apt" interface that hides the details of apt_pkg

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri,  6 May 2005 10:11:52 +0200
  
python-apt (0.6.11) experimental; urgency=low

  * fixed some reference count problems in the depcache and 
    pkgsrcrecords code
  * DepCache.Init() is never called implicit now
  * merged with python-apt tree from Greek0@gmx.net--2005-main

 -- Michael Vogt <mvo@debian.org>  Fri,  6 May 2005 10:04:38 +0200

python-apt (0.5.36ubuntu2) hoary; urgency=low

  * return "None" in GetCandidateVer() if no Candidate is found

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Mar 2005 12:30:06 +0100

python-apt (0.5.36ubuntu1) hoary; urgency=low

  * DepCache.ReadPinFile() added
  * Fixed a bug in DepCache.Upgrade()

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed,  2 Mar 2005 11:32:15 +0100

python-apt (0.5.36) hoary; urgency=low

  * Fix build-depends, somehow lost in merge

 -- Matt Zimmerman <mdz@ubuntu.com>  Sat, 26 Feb 2005 18:53:54 -0800

python-apt (0.5.35) hoary; urgency=low

  * Target hoary this time

 -- Matt Zimmerman <mdz@ubuntu.com>  Sat, 26 Feb 2005 15:57:21 -0800

python-apt (0.5.34) unstable; urgency=low

  * Restore Ubuntu changes
    - Build python 2.4 as default, add python2.3-apt
    - Typo fix (Ubuntu #4677)
