@@ -1,7 +1,9 @@
 python-apt (0.6.13) breezy; urgency=low
 
   * support for Marked{Downgrade,Reinstall} added
-  * Cache.GetChanges() added
+  * Cache.GetChanges() added 
+  * FilteredCache() improvements
+  * added "connect()" to {Pre,Post}CacheChange
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed,  1 Jun 2005 14:57:57 +0200
 
